Enhanced shadow transitions.

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,7 @@
 .mod-livepoll-shadowy {
     box-shadow: 0.3rem 0.8rem 0.6rem #888888;
+}
+
+.mod-livepoll-text-result {
     transition: box-shadow 0.3s ease-in-out;
 }
