--- a/templates/text_result.mustache
+++ b/templates/text_result.mustache
@@ -44,7 +44,7 @@
     <div class="row">
         {{#options}}
             <div class="col-sm">
-                <div class="alert alert-info" role="alert">
+                <div class="alert alert-info mod-livepoll-text-result" role="alert">
                     <p class="alert-heading">{{ title }}</p>
                     <h4>{{ value }}</h4>
                     <hr>
