--- a/templates/barchart_result.mustache
+++ b/templates/barchart_result.mustache
@@ -43,7 +43,7 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-2"></div>
-        <canvas id="livepoll-chart" class="col-lg-8"></canvas>
+        <div class="col-lg-8"><canvas id="livepoll-chart"></canvas></div>
         <div class="col-lg-2"></div>
     </div>
 </div>
