--- a/templates/mobile_view_page.mustache
+++ b/templates/mobile_view_page.mustache
@@ -17,9 +17,7 @@
 {{!
     @template mod_livepoll/livepoll
 
-    Moodle modal template for SafeAssign test credentials function.
-
-    The purpose of this template is to render a modal
+    The purpose of this template is to render a mobile version of the poll.
 
     Classes required for JS:
     * none
@@ -38,8 +36,12 @@
                 "optionid" : "optiona",
                 "value" : "abc"
             },
-            ...
-        ],
+            {
+                "title" : "Option B",
+                "optionid" : "optionb",
+                "value" : "def"
+            }
+        ]
     }
 }}
 {{=<% %>=}}
