--- a/templates/voting_buttons.mustache
+++ b/templates/voting_buttons.mustache
@@ -17,7 +17,7 @@
 {{!
     @template mod_livepoll/livepoll
 
-    The purpose of this template is to render the livepoll container.
+    The purpose of this template is to render the livepoll voting buttons.
 
     Classes required for JS:
     * none
@@ -36,8 +36,12 @@
                 "optionid" : "optiona",
                 "value" : "abc"
             },
-            ...
-        ],
+            {
+                "title" : "Option B",
+                "optionid" : "optionb",
+                "value" : "def"
+            }
+        ]
     }
 }}
 <h5>
