--- a/templates/barchart_result.mustache
+++ b/templates/barchart_result.mustache
@@ -17,7 +17,7 @@
 {{!
     @template mod_livepoll/livepoll
 
-    The purpose of this template is to render the livepoll container.
+    The purpose of this template is to render the livepoll container for the chart result.
 
     Classes required for JS:
     * none
@@ -26,18 +26,10 @@
     * none
 
     Context variables required for this template:
-    * options list of available options
+    * none
 
     Example context (json):
     {
-        "options": [
-            {
-                "title" : "Option A",
-                "optionid" : "optiona",
-                "value" : "abc"
-            },
-            ...
-        ],
     }
 }}
 <div class="container">
