--- a/templates/text_result.mustache
+++ b/templates/text_result.mustache
@@ -17,7 +17,7 @@
 {{!
     @template mod_livepoll/livepoll
 
-    The purpose of this template is to render the livepoll container.
+    The purpose of this template is to render the livepoll text results.
 
     Classes required for JS:
     * none
@@ -36,8 +36,12 @@
                 "optionid" : "optiona",
                 "value" : "abc"
             },
-            ...
-        ],
+            {
+                "title" : "Option B",
+                "optionid" : "optionb",
+                "value" : "def"
+            }
+        ]
     }
 }}
 <div class="container">
