--- a/templates/mobile_view_page.mustache
+++ b/templates/mobile_view_page.mustache
@@ -30,17 +30,26 @@
 
     Example context (json):
     {
+        "cmurl" : "https://live.poll",
+        "cmid" : 10,
+        "courseid" : 20,
+        "livepoll" : {
+            "id" : 30,
+            "intro" : "An intro",
+            "name" : "A name"
+        },
+        "canvote" : true,
         "options": [
-            {
-                "title" : "Option A",
-                "optionid" : "optiona",
-                "value" : "abc"
-            },
-            {
-                "title" : "Option B",
-                "optionid" : "optionb",
-                "value" : "def"
-            }
+             {
+                 "title" : "Option A",
+                 "optionid" : "optiona",
+                 "value" : "abc"
+             },
+             {
+                 "title" : "Option B",
+                 "optionid" : "optionb",
+                 "value" : "def"
+             }
         ]
     }
 }}
