--- a/templates/text_result.mustache
+++ b/templates/text_result.mustache
@@ -52,7 +52,7 @@
                     <p class="alert-heading">{{ title }}</p>
                     <h4>{{ value }}</h4>
                     <hr>
-                    <h2 id="vote-count-{{ optionid }}" class="mb-0">
+                    <h2 class="mb-0 vote-count-{{ optionid }}">
                         {{# pix }} i/loading, core, {{# str }} loading, admin {{/ str }} {{/ pix }}
                     </h2>
                 </div>
