Added total vote count and some README enhancements.

--- a/templates/text_result.mustache
+++ b/templates/text_result.mustache
@@ -59,4 +59,9 @@
             </div>
         {{/options}}
     </div>
+    <div class="row">
+        <p class="col-sm">
+            {{# str }} totalvotes, mod_livepoll {{/ str }} <span class="mod-livepoll-totalvotes">0</span>
+        </p>
+    </div>
 </div>
